fix: menu on mobile

--- a/src/app/modules/site/core/components/site-action-header/site-action-header.component.scss
+++ b/src/app/modules/site/core/components/site-action-header/site-action-header.component.scss
@@ -5,10 +5,14 @@ header.site-action-header {
   background-color: #000;
   color: #fff;
   transition: 0.3s;
+  width: 100%;
+  .mobile-menu {
+    display: none;
+  }
+  #logo {
+    width: 100px;
+  }
   .site-action-element {
-    #logo {
-      width: 100px;
-    }
     p.site-action-link {
       transition: 0.3s;
       cursor: pointer;
@@ -33,6 +37,68 @@ header.site-action-header {
         border-radius: 50%;
         border: 2px solid #fff;
         font-weight: 600;
+      }
+    }
+  }
+  @media (max-width:900px) {
+    position: absolute;
+    padding: 10px 40px;
+    #logo {
+      z-index: 2;
+    }
+    .user-ball {
+      z-index: 4;
+    }
+    #store {
+      display: none;
+    }
+    .mobile-menu {
+      display: block;
+      cursor: pointer;
+      font-size: 20px;
+      z-index: 2;
+    }
+    .site-action-header-left {
+      display: none;
+      &.active {
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+        background-color: #000;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        justify-content: center;
+        align-items: start;
+        padding: 0 40px;
+        animation: openingAnima 0.5s;
+        @keyframes openingAnima {
+          from {
+            opacity: 0;
+          } to {
+            opacity: 1;
+          }
+        }
+      }
+    }
+    .site-action-element {
+      #logo {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+      p.site-action-link {
+        font-size: 12px;
+      }
+      &.site-action-header-right {
+        .user-ball {
+          width: 20px;
+          height: 20px;
+          font-size: 6px;
+        }
       }
     }
   }
